[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Sprites/gun.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Gun.gd" type="Script" id=2]
[ext_resource path="res://Assets/Music/Gun_noise.ogg" type="AudioStream" id=3]

[node name="Gun" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
z_index = 2
texture = ExtResource( 1 )
offset = Vector2( 320, 0 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 36, 0 )

[node name="ShotDelay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LoadDelay" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="timeout" from="ShotDelay" to="." method="_on_ShotDelay_timeout"]
[connection signal="timeout" from="LoadDelay" to="." method="_on_LoadDelay_timeout"]
